2007-06-14  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, src/rb_cairo_surface.c, src/rb_cairo_private.h: used
	rb_errinfo() and RSTRING_LEN() if available for supporting ruby
	1.9. Thanks to Paul van Tilburg!!!

	* README: added Paul van Tilburg to Thanks list.

2007-06-14  Paul van Tilburg  <paulvt@debian.org>

	* extconf.rb: used String#each_line instead of String#each for
	supporting ruby 1.9.

2007-06-03  Kouhei Sutou  <kou@cozmixng.org>

	* samples/agg/aa_test.rb: fixed wrong operation.

2007-05-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/context/path.rb: fixed typos.
	Thanks to NANKI Haruo!!!
	* README: added an entry for NANKI Haruo.

2007-05-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/context.rb, src/lib/cairo/context/triangle.rb:
	added a convenience method.

	* samples/agg/aa_test.rb: implemented random shapes test.

2007-05-27  Kouhei Sutou  <kou@cozmixng.org>

	* samples/agg/aa_test.rb: ported from AGG's example.

        * README: added some links for documentation.

	* src/rb_cairo.c: 1.5.0 -> 1.5.1.

	* Rakefile: improved current release NEWS extraction.

	* NEWS: updated.

	* Rakefile: supported document update.

	* src/depend (install-so): used install-so instead of install.

	* src/rb_cairo_font_options.c (Cairo::FontOptions#merge): renamed
	to merge! because the method is destructive.

	* src/lib/cairo.rb (Cairo::FontOptions#merge): added
	non-destructive version.

2007-05-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo.rb (Cairo.normalize_const_name): treated "." as
	ignore character.

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.6.0 -> 1.5.0.

2007-05-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_pattern.c (cr_radial_pattern_get_radial_circles):
	returned [[x0, y0, r0], [x1, y1, r1]] instead of [x0, y0, r0, x1,
	y1, r1].

	* src/rb_cairo_path.c: used super.

	* src/rb_cairo_path.c (Cairo::PathMoveTo, Cairo::PathLineTo,
	Cairo::PathCurveTo, Cairo::PathClosePath): defined each path data
	type as class.
